--- a/src/layouts/PageLayout.module.css
+++ b/src/layouts/PageLayout.module.css
@@ -1,10 +1,4 @@
-.pageBox {
-  /* margin-left: -16px;
-  margin-right: -16px; */
-  /* background-color: light-dark(var(--mantine-color-blue-1), var(--mantine-color-indigo-1)); */
-  /* min-height: 85vh; */
-}
-
 .pageCenter {
   background-color: light-dark(var(--mantine-color-blue-1), var(--mantine-color-indigo-1));
+  /* min-height: 100vh; */
 }
